Plug in/Line/api_VecApi.h

//-------------------------------------
// VeCAD point
//-------------------------------------
typedef struct tagVLPOINT {
  double x;
  double y;
}VLPOINT;
/////////////////////////////////////////////////
// Add graphic objects to drawing database

int  VC_API vlAddPoint      (double X, double Y);
int  VC_API vlAddLine       (double X1, double Y1, double X2, double Y2);
int  VC_API vlAddCircle     (double X, double Y, double Rad);
int  VC_API vlAddCircle3P   (double X1, double Y1, double X2, double Y2, double X3, double Y3);
int  VC_API vlAddArc        (double X, double Y, double Rad, double Ang1, double Ang2);
int  VC_API vlAddArc3P      (double X1, double Y1, double X2, double Y2, double X3, double Y3);
int  VC_API vlAddEllipse    (double X, double Y, double Rh, double Rv, double Angle);
int  VC_API vlAddArcEx      (double X, double Y, double Rh, double Rv, double Ang0, double AngArc, double AngRot);
BOOL VC_API vlSetTextParam  (int Mode, double Var);
BOOL VC_API vlSetTextParams (int Align, double Height, double Angle, double ScaleW, double Oblique, double HInter, double VInter);
int  VC_API vlAddText       (double X, double Y, LPCTSTR szStr);
BOOL VC_API vlPolylineBegin ();
BOOL VC_API vlVertex        (double X, double Y);
BOOL VC_API vlVertexR       (double X, double Y, double Radius);
BOOL VC_API vlVertexF       (double X, double Y, BOOL bOnCurve);
BOOL VC_API vlVertexB       (double X, double Y, double Bulge);
int  VC_API vlAddPolyline   (int SmoothType, BOOL bClosed);
int  VC_API vlAddBlockIns   (int Index, double X, double Y, double Angle, double Xscale, double Yscale);
int  VC_API vlAddHatch      (int Index, double Scale, double Angle);
int  VC_API vlAddRaster     (LPCTSTR FileName, double X, double Y, double ResH, double ResV);
int  VC_API vlAddRect       (double X, double Y, double W, double H, double Ang, double Rad);
int  VC_API vlAddDimHor     (double X1, double Y1, double X2, double Y2, double Y);
int  VC_API vlAddDimVer     (double X1, double Y1, double X2, double Y2, double X);
int  VC_API vlAddDimPar     (double X1, double Y1, double X2, double Y2, double Off);
int  VC_API vlAddDimAng     (double Xcen, double Ycen, double X1, double Y1, double X2, double Y2, double Off);
int  VC_API vlAddDimRad     (double Xcen, double Ycen, double Xrad, double Yrad, double Off);
int  VC_API vlAddDimDiam    (double Xcen, double Ycen, double Xrad, double Yrad);
int  VC_API vlAddDimOrd     (double X, double Y, double Xtxt, double Ytxt, BOOL bYord);
int  VC_API vlAddDwgIns     (LPCTSTR FileName, double X, double Y, double Angle, double ScaleH, double ScaleV, int iPage);
int  VC_API vlAddCustom     (int Type, void* pData, int DataSize, int ElemSize);
/////////////////////////////////////////////////
// Drawing's storage
int  VC_API vlFileNew     (HWND hwVec, LPCTSTR szTemplate);
int  VC_API vlFileOpen    (HWND hwVec, LPCTSTR szFileName);
BOOL VC_API vlFileLoad    (int Mode, LPCTSTR szFileName);
BOOL VC_API vlFileSave    (int Mode, LPCTSTR szFileName);
BOOL VC_API vlFileList    (HWND hwParent);
BOOL VC_API vlFileLoadMem (void* pMem);
int  VC_API vlFileSaveMem (void* pMem, int MaxSize);
/////////////////////////////////////////////////
// Select objects for edit functions
int  VC_API vlGetEntity       (int Mode, int Prm1, int Prm2);
int  VC_API vlGetBlockEntity  (int iBlock, int Counter);
BOOL VC_API vlSelect          (BOOL bSelect, int Index);
int  VC_API vlSelectByPoint   (BOOL bSelect, double X, double Y, double Delta);
int  VC_API vlSelectByRect    (BOOL bSelect, double Left, double Bottom, double Right, double Top, BOOL Cross);
int  VC_API vlSelectByPolygon (BOOL bSelect, const VLPOINT* Ver, int nver, BOOL bCross);
int  VC_API vlSelectByPolyline(BOOL bSelect, const VLPOINT* Ver, int nver);
int  VC_API vlSelectByDist    (BOOL bSelect, double X, double Y, double Dist, BOOL bCross);
/////////////////////////////////////////////////
// Edit objects functions
// iObj - index of the object, 
// if iObj=-1 then operate with selected objects
BOOL VC_API vlCbCut         ();
BOOL VC_API vlCbCopy        ();
BOOL VC_API vlCbPaste       (double X, double Y);
int  VC_API vlCopy          (int iObj, double dx, double dy);
BOOL VC_API vlMove          (int iObj, double dx, double dy);
BOOL VC_API vlRotate        (int iObj, double X, double Y, double Angle);
BOOL VC_API vlScale         (int iObj, double X, double Y, double Scale);
BOOL VC_API vlMirror        (int iObj, double X1, double Y1, double X2, double Y2);
BOOL VC_API vlErase         (int iObj);
BOOL VC_API vlExplode       (int iObj);
BOOL VC_API vlJoin          (double Delta);
BOOL VC_API vlUndo          ();
BOOL VC_API vlRedo          ();
BOOL VC_API vlPolyVerInsert (int iEnt, int iVer);
BOOL VC_API vlPolyVerDelete (int iEnt, int iVer);
BOOL VC_API vlPolyVerGet    (int iEnt, int iVer, double* pX, double* pY, double* pPrm);
BOOL VC_API vlPolyVerSet    (int iEnt, int iVer, double X, double Y, double Prm);
BOOL VC_API vlGripGet       (int iObj, int iGrip, double* pX, double* pY);
BOOL VC_API vlGripSet       (int iObj, int iGrip, double X, double Y);
BOOL VC_API vlGripMove      (int iObj, int iGrip, double dx, double dy);
/////////////////////////////////////////////////
// Access to objects properties
int    VC_API vlPropGet    (int PropID, int iObj, void* pData);
int    VC_API vlPropGetInt (int PropID, int iObj);
double VC_API vlPropGetDbl (int PropID, int iObj);
int    VC_API vlPropPut    (int PropID, int iObj, void* pData);
int    VC_API vlPropPutInt (int PropID, int iObj, int Value);
int    VC_API vlPropPutDbl (int PropID, int iObj, double Value);
/////////////////////////////////////////////////
// Zooming drawing in a window
BOOL VC_API vlZoom     (double Scale);
BOOL VC_API vlZoomRect (double Left, double Bottom, double Right, double Top);
BOOL VC_API vlZoomPan  (double dx, double dy);
/////////////////////////////////////////////////
// Coordinates convertions
BOOL VC_API vlCoordWinToDwg (int Xwin, int Ywin, double* pXdwg, double* pYdwg);
BOOL VC_API vlCoordDwgToWin (double Xdwg, double Ydwg, int* pXwin, int* pYwin);
BOOL VC_API vlLenWinToDwg   (int Lwin, double* pLdwg);
BOOL VC_API vlLenDwgToWin   (double Ldwg, int* pLwin);
/////////////////////////////////////////////////
// draw graphics primitives
BOOL VC_API vlSetDrawPen   (double Width, COLORREF Color);
BOOL VC_API vlDrawPoint    (double X, double Y, int Type, int Size);
BOOL VC_API vlDrawLine     (double X1, double Y1, double X2, double Y2);
BOOL VC_API vlDrawPolyline (const VLPOINT* Ver, int n_ver, BOOL bClosed);
BOOL VC_API vlDrawPolygon  (const VLPOINT* Ver, int n_ver, BOOL bFill, BOOL bBorder, COLORREF FillColor);
BOOL VC_API vlDrawCircle   (double X, double Y, double Rad);
BOOL VC_API vlDrawArc      (double X, double Y, double Rad, double Angle1, double Angle2);
BOOL VC_API vlDrawEllipse  (double X, double Y, double Rh, double Rv, double Angle);
BOOL VC_API vlDrawText     (double X, double Y, LPCTSTR szText);
BOOL VC_API vlDrawBitmap   (HBITMAP hbm, int W, int H, double X, double Y, double ResX, double ResY);
BOOL VC_API vlDrawEntity   (int Index, double Xbase, double Ybase, double Xins, double Yins, double Angle, double ScaleX, double ScaleY);
/////////////////////////////////////////////////
// misc
BOOL VC_API vlExecute      (int IdCmd);   // VL_CM_...
BOOL VC_API vlSetAccKey    (int IdCmd, int VirtKey, int Flags);
BOOL VC_API vlClear        (BOOL bSetDefLayout);
BOOL VC_API vlSetFocus     ();
BOOL VC_API vlUpdate       ();
BOOL VC_API vlRedraw       ();
BOOL VC_API vlReset        ();
BOOL VC_API vlPrintSetup   (HWND hParent);
BOOL VC_API vlPrint        (HDC hPrintDC, double Left, double Bottom, double Right, double Top, double ScaleX, double ScaleY, double OriginX, double OriginY);
BOOL VC_API vlDoRaster     (LPCTSTR szFileName, double Left, double Bottom, double Right, double Top, double Res);
BOOL VC_API vlGetWinSize   (HWND hWnd, int* pWidth, int* pHeight);
BOOL VC_API vlSetTimer     (int ID, int Elapse);
BOOL VC_API vlKillTimer    (int ID);
double VC_API vlGetArea    (double X, double Y);