Packages/VECAD52/vecad52/VECAD/api_VecApi.pas


/////////////////////////////////////////////////
// Add Graphic objects to drawing
Function vlAddPoint        (X,Y: Double): Integer; stdcall; external 'vecad52.dll';
Function vlAddLine         (X1,Y1,X2,Y2: Double): Integer; stdcall; external 'vecad52.dll';
Function vlAddArcEx        (X, Y, Rh, Rv, Ang0, AngArc, AngRot: Double): Integer; stdcall; external 'vecad52.dll';
Function vlAddCircle       (X,Y: Double; Rad: Double): Integer;stdcall; external 'vecad52.dll';
Function vlAddCircle3P     (X1,Y1,X2,Y2,X3,Y3: Double): Integer;stdcall; external 'vecad52.dll';
Function vlAddArc          (X,Y,Rad,Ang1,Ang2: Double): Integer;stdcall; external 'vecad52.dll';
Function vlAddArc3P        (X1,Y1,X2,Y2,X3,Y3: Double): Integer;stdcall; external 'vecad52.dll';
Function vlAddEllipse      (X,Y: Double; Rh,Rv,Angle: Double): Integer;stdcall; external 'vecad52.dll';
Function vlSetTextParam    (Mode: Integer; data:Double): Boolean; stdcall; external 'vecad52.dll';
Function vlSetTextParams   (Align: Integer; Height,Angle,ScaleW,Oblique,HInter,VInter: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlAddText         (X,Y: Double; szStr:Pchar): Integer;stdcall; external 'vecad52.dll';
Function vlPolylineBegin   :Boolean; stdcall; external 'vecad52.dll';
Function vlVertex          (X,Y: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlVertexR         (X,Y,Radius: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlVertexF         (X,Y: Double; bOnCurve: Boolean): Boolean; stdcall; external 'vecad52.dll';
Function vlVertexB         (X,Y,Bulge: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlAddPolyline     (SmoothType: Integer; Closed: Boolean): Integer; stdcall; external 'vecad52.dll';
Function vlAddBlockIns     (Index: Integer; X,Y,Angle,Xscale,Yscale: Double): Integer; stdcall; external 'vecad52.dll';
Function vlAddHatch        (Index: Integer; Scale,Angle: Double):Integer;stdcall; external 'vecad52.dll';
Function vlAddRaster       (FileName: Pchar; X,Y,ResH,ResV: Double):Integer;stdcall; external 'vecad52.dll';
Function vlAddRect         (X,Y,W,H,Ang,Rad: Double): Integer; stdcall; external 'vecad52.dll';
Function vlAddDimHor       (X1,Y1,X2,Y2,Y: Double): Integer; stdcall; external 'vecad52.dll';
Function vlAddDimVer       (X1,Y1,X2,Y2,X: Double): Integer; stdcall; external 'vecad52.dll';
Function vlAddDimPar       (X1,Y1,X2,Y2,Off: Double): Integer; stdcall; external 'vecad52.dll';
Function vlAddDimAng       (Xcen,Ycen,X1,Y1,X2,Y2,Off: Double): Integer; stdcall; external 'vecad52.dll';
Function vlAddDimRad       (Xcen,Ycen,Xrad,Yrad,Off: Double): Integer; stdcall; external 'vecad52.dll';
Function vlAddDimDiam      (Xcen,Ycen,Xrad,Yrad: Double): Integer; stdcall; external 'vecad52.dll';
Function vlAddDimOrd       (X,Y,Xtxt,Ytxt: Double; bYord: Boolean): Integer; stdcall; external 'vecad52.dll';
Function vlAddDwgIns       (FileName: Pchar; X,Y,Angle,ScaleX,ScaleY: Double; iPage:Integer): Integer; stdcall; external 'vecad52.dll';
Function vlAddCustom       (ObjType:Integer; pData:Pointer; DataSize,ElemSize:Integer): Boolean; stdcall; external 'vecad52.dll';


/////////////////////////////////////////////////
// Drawing's storage
Function vlFileNew         (hwVec: HWND; Template: Pchar): Integer; stdcall; external 'vecad52.dll';
Function vlFileOpen        (hwVec: HWND; FileName: Pchar): Integer; stdcall; external 'vecad52.dll';
Function vlFileLoad        (Mode: Integer; FileName: Pchar): Boolean; stdcall; external 'vecad52.dll';
Function vlFileSave        (Mode: Integer; FileName: Pchar): Boolean; stdcall; external 'vecad52.dll';
Function vlFileList        (hwParent: HWND): Boolean; stdcall; external 'vecad52.dll';
Function vlFileLoadMem     (pMem: Pointer): Boolean; stdcall; external 'vecad52.dll';
Function vlFileSaveMem     (pMem: Pointer; MaxSize:Integer): Integer; stdcall; external 'vecad52.dll';

/////////////////////////////////////////////////
// Select objects for edit functions
Function vlGetEntity       (Mode, Prm1, Prm2: Integer): Integer; stdcall; external 'vecad52.dll';
Function vlGetBlockEntity  (iBlock, Counter: Integer): Integer; stdcall; external 'vecad52.dll';
Function vlSelect          (Select: Boolean; Index: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlSelectByPoint   (Select: Boolean; X, Y, Delta: Double): Integer; stdcall; external 'vecad52.dll';
Function vlSelectByRect    (Select: Boolean; Left, Bottom, Right, Top: Double; Cross: Boolean): Integer; stdcall; external 'vecad52.dll';
Function vlSelectByPolygon (Select: Boolean; Ver: PVLPOINT; Nver: Integer; Cross: Boolean): Integer; stdcall; external 'vecad52.dll';
Function vlSelectByPolyline(Select: Boolean; Ver: PVLPOINT; Nver: Integer): Integer; stdcall; external 'vecad52.dll';
Function vlSelectByDist    (Select: Boolean; X, Y, Dist: Double; Cross: Boolean): Integer; stdcall; external 'vecad52.dll';

/////////////////////////////////////////////////
// Edit objects functions
// iObj - index of the object, 
// if iObj=-1 then operate with selected objects
Function vlCbCut         :Boolean;stdcall; external 'vecad52.dll';
Function vlCbCopy        :Boolean;stdcall; external 'vecad52.dll';
Function vlCbPaste       (X,Y: Double):Boolean;stdcall; external 'vecad52.dll';
Function vlCopy          (iObj: Integer; dx,dy: Double): Integer; stdcall; external 'vecad52.dll';
Function vlMove          (iObj: Integer; dx,dy: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlRotate        (iObj: Integer; X,Y,Angle: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlScale         (iObj: Integer; X,Y,Scale: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlMirror        (iObj: Integer; X1,Y1,X2,Y2: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlErase         (iObj: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlExplode       (iObj: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlJoin          (Delta: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlTrim          (iObj,iTrimEdge: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlExtend        (iObj,iExtEdge: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlFillet        (iObj1,iObj2: Integer; Radius: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlUndo          :Boolean; stdcall; external 'vecad52.dll';
Function vlRedo          :Boolean; stdcall; external 'vecad52.dll';
Function vlPolyVerInsert (iEnt, iVer: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlPolyVerDelete (iEnt, iVer: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlPolyVerGet    (iEnt, iVer: Integer; pX, pY, pPrm: PDouble): Boolean; stdcall; external 'vecad52.dll';
Function vlPolyVerSet    (iEnt, iVer: Integer; X, Y, Prm: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlGripGet       (iObj, iGrip: Integer; pX, pY: PDouble): Boolean; stdcall; external 'vecad52.dll';
Function vlGripSet       (iObj, iGrip: Integer; X,Y: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlGripMove      (iObj, iGrip: Integer; dx,dy: Double): Boolean; stdcall; external 'vecad52.dll';

/////////////////////////////////////////////////
// Access to objects properties
Function vlPropGet    (Key,iObj: Integer; pData: Pointer): Integer; stdcall; external 'vecad52.dll';
Function vlPropGetInt (Key,iObj: Integer): Integer; stdcall; external 'vecad52.dll';
Function vlPropGetDbl (Key,iObj: Integer): Double; stdcall; external 'vecad52.dll';
Function vlPropPut    (Key,iObj: Integer; pData: Pointer): Integer; stdcall; external 'vecad52.dll';
Function vlPropPutInt (Key,iObj,Data: Integer): Integer; stdcall; external 'vecad52.dll';
Function vlPropPutDbl (Key,iObj: Integer; Data: Double): Integer; stdcall; external 'vecad52.dll';

/////////////////////////////////////////////////
// Zooming drawing in a window
Function vlZoom     (Scale: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlZoomRect (Left, Bottom, Right, Top: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlZoomPan  (dx, dy: Double): Boolean; stdcall; external 'vecad52.dll';

/////////////////////////////////////////////////
// Coordinates convertions
Function vlCoordWinToDwg  (Xwin,Ywin: Integer; pXdwg,pYdwg: PDouble):Boolean; stdcall; external 'vecad52.dll';
Function vlCoordDwgToWin  (X,Y: Double; pXwin,pYwin: PInteger):Boolean; stdcall; external 'vecad52.dll';
Function vlLenWinToDwg    (Lwin: Integer; pLdwg: PDouble):Boolean; stdcall; external 'vecad52.dll';
Function vlLenDwgToWin    (Ldwg: Double; pLwin: PInteger):Boolean; stdcall; external 'vecad52.dll';

/////////////////////////////////////////////////
// draw graphics primitives
Function vlSetDrawPen   (Width: Double; Color: COLORREF): Boolean; stdcall; external 'vecad52.dll';
Function vlDrawPoint    (X,Y: Double; Ptype,Size: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlDrawLine     (X1,Y1,X2,Y2: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlDrawPolyline (Ver: PVLPOINT; Nver: Integer; bClosed: Boolean): Boolean; stdcall; external 'vecad52.dll';
Function vlDrawPolygon  (Ver: PVLPOINT; Nver: Integer; bFill, bBorder: Boolean; FillColor: COLORREF): Boolean; stdcall; external 'vecad52.dll';
Function vlDrawCircle   (X,Y,Rad: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlDrawArc      (X,Y,Rad,Angle1,Angle2: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlDrawEllipse  (X,Y,Rh,Rv,Angle: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlDrawText     (X,Y: Double; szText: Pchar): Boolean; stdcall; external 'vecad52.dll';
Function vlDrawBitmap   (hbm: HBITMAP; W, H: Integer; X, Y, ResX, ResY: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlDrawEntity   (Index: Integer; Xbase,Ybase,Xins,Yins,Angle,ScaleX,ScaleY: Double):Boolean; stdcall; external 'vecad52.dll';

/////////////////////////////////////////////////
// misc
Function vlExecute      (IdCmd: Integer): Boolean; stdcall; external 'vecad52.dll'; 
Function vlSetAccKey    (IdCmd, VirtKey,Flags: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlClear        (bSetDefLayout: Boolean): Boolean; stdcall; external 'vecad52.dll';
Function vlSetFocus     :Boolean; stdcall; external 'vecad52.dll';
Function vlUpdate       :Boolean; stdcall; external 'vecad52.dll';
Function vlRedraw       :Boolean; stdcall; external 'vecad52.dll';
Function vlReset        :Boolean; stdcall; external 'vecad52.dll';
Function vlPrintSetup   (hParent: HWND): Boolean; stdcall; external 'vecad52.dll';
Function vlPrint        (hPrintDC: HDC; Left,Bottom,Right,Top,ScaleX,ScaleY,OriginX,OriginY: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlDoRaster     (FileName: Pchar; Left, Bottom, Right, Top, Res: Double): Boolean; stdcall; external 'vecad52.dll';
Function vlGetWinSize   (hWnd: HWND; pWidth, pHeight: PInteger): Boolean; stdcall; external 'vecad52.dll';
Function vlSetTimer     (ID, Elapse: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlKillTimer    (ID: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlGetArea      (X, Y: Double): Double; stdcall; external 'vecad52.dll';

/////////////////////////////////////////////////
// Additional VeCAD controls
